--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAlarmManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAlarmManager.java.vm
@@ -1,3 +1,6 @@
+#set($Integer = 0)
+#set($apiLevel = $Integer.parseInt($apiLevel))
+
 package org.robolectric.shadows;
 
 import android.app.AlarmManager;
@@ -23,6 +26,13 @@ public class ShadowAlarmManager {
   public void set(int type, long triggerAtTime, PendingIntent operation) {
     internalSet(type, triggerAtTime, 0L, operation);
   }
+
+#if ($apiLevel >= 19)
+  @Implementation
+  public void setExact(int type, long triggerAtTime, PendingIntent operation) {
+    internalSet(type, triggerAtTime, 0L, operation);
+  }
+#end
 
   @Implementation
   public void setRepeating(int type, long triggerAtTime, long interval, PendingIntent operation) {
