--- a/src/test/resources/res/xml/preferences.xml
+++ b/src/test/resources/res/xml/preferences.xml
@@ -55,8 +55,8 @@
       />
 
   <Preference
-      android:key="@string/preference_resource"
-      android:title="Preference with resource key Test"
-      android:summary=""/>
+      android:key="@string/preference_resource_key"
+      android:title="@string/preference_resource_title"
+      android:summary="@string/preference_resource_summary"/>
 
 </PreferenceScreen>
