Removing what looks like an outdated hack so preference screens can be initialized with a context

--- a/src/test/resources/res/xml/preferences.xml
+++ b/src/test/resources/res/xml/preferences.xml
@@ -15,7 +15,8 @@
 
   <PreferenceScreen
       android:key="screen"
-      android:title="Screen Test">
+      android:title="Screen Test"
+      android:summary="Screen summary">
 
     <Preference
         android:key="inside_screen"
