--- a/src/test/resources/res/values/integers.xml
+++ b/src/test/resources/res/values/integers.xml
@@ -5,4 +5,5 @@
   <integer name="there_can_be_only">@integer/loneliest_number</integer>
   <integer name="hex_int">0xFFFF0000</integer>
   <integer name="reference_to_meaning_of_life">@meaning_of_life</integer>
+  <item name="meaning_of_life_as_item" type="integer">42</item>
 </resources>
