added test for accepting ordinal values in as view xml attributes.
fails as expected.

--- a/src/test/resources/res/values/integer.xml
+++ b/src/test/resources/res/values/integer.xml
@@ -5,4 +5,5 @@
   <integer name="test_integer2">9</integer>
   <integer name="test_large_hex">0xFFFF0000</integer>
   <integer name="test_value_with_zero">07210</integer>
+  <integer name="scrollbar_style_ordinal_outside_overlay">0x02000000</integer>
 </resources>
