--- a/src/test/resources/res/values/bools.xml
+++ b/src/test/resources/res/values/bools.xml
@@ -6,4 +6,5 @@
   <bool name="integers_are_true">7</bool>
   <bool name="reference_to_true">@true_bool_value</bool>
   <item name="true_as_item" type="bool">true</item>
+  <bool name="different_resource_boolean">false</bool>
 </resources>
