--- a/src/test/resources/res/menu/test.xml
+++ b/src/test/resources/res/menu/test.xml
@@ -2,5 +2,5 @@
   <item android:id="@+id/test_menu_1"
     android:title="Test menu item 1" />
   <item android:id="@+id/test_menu_2"
-    android:title="Test menu item 2" />
+    android:title="@string/test_menu_2" />
 </menu>
