Fix dereferencing resources from styles
Fixes #1158. Closes #1161.

--- a/src/test/resources/res/values/themes.xml
+++ b/src/test/resources/res/values/themes.xml
@@ -44,4 +44,8 @@
   <style name="Gastropod">
       <item name="aspectRatio">1.69</item>
   </style>
+
+  <style name="MyBlackTheme">
+    <item name="android:windowBackground">@android:color/black</item>
+  </style>
 </resources>
