ShadowAssetManager dereferences attrs better
ShadowAssetManager now looks in the full style tree (children and
themes) while dereferencing parent styles.

In order, ShadowAssetManager will search:
 - All known children in this style path
 - The Theme Style
 - The ResourceLoader

Improves the logging information when a parent style can't be found.

--- a/src/test/resources/res/values/themes.xml
+++ b/src/test/resources/res/values/themes.xml
@@ -54,4 +54,9 @@
     <item name="android:windowBackground">@color/blue</item>
     <item name="android:textColor">@color/white</item>
   </style>
+
+  <style name="IndirectButtonStyle" parent="@android:attr/buttonStyle">
+    <item name="android:minHeight">12dp</item>
+  </style>
+
 </resources>
