--- a/src/test/resources/res/values/themes.xml
+++ b/src/test/resources/res/values/themes.xml
@@ -47,5 +47,11 @@
 
   <style name="MyBlackTheme">
     <item name="android:windowBackground">@android:color/black</item>
+    <item name="android:textColorHint">@android:color/darker_gray</item>
+  </style>
+
+  <style name="MyBlueTheme">
+    <item name="android:windowBackground">@color/blue</item>
+    <item name="android:textColor">@color/white</item>
   </style>
 </resources>
