--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowPowerManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowPowerManager.java.vm
@@ -1,3 +1,6 @@
+#set($Integer = 0)
+#set($apiLevel = $Integer.parseInt($apiLevel))
+
 package org.robolectric.shadows;
 
 import android.os.PowerManager;
@@ -16,8 +19,8 @@ import static org.robolectric.shadows.ShadowApplication.getInstance;
  */
 @Implements(PowerManager.class)
 public class ShadowPowerManager {
-
   private boolean isScreenOn = true;
+  private boolean isInteractive = true;
 
   @Implementation
   public PowerManager.WakeLock newWakeLock(int flags, String tag) {
@@ -34,6 +37,17 @@ public class ShadowPowerManager {
   public void setIsScreenOn(boolean screenOn) {
     isScreenOn = screenOn;
   }
+
+#if ($apiLevel >= 20)
+  @Implementation
+  public boolean isInteractive() {
+    return isInteractive;
+  }
+
+  public void setIsInteractive(boolean interactive) {
+    isInteractive = interactive;
+  }
+#end
 
   /**
    * Non-Android accessor that discards the most recent {@code PowerManager.WakeLock}s
