--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowTypeface.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowTypeface.java.vm
@@ -1,7 +1,21 @@
+#set($Integer = 0)
+#set($apiLevel = $Integer.parseInt($apiLevel))
+
+#if ($apiLevel >= 21)
+#set($ptrClass = "long")
+#set($ptrClassBoxed = "Long")
+#else
+#set($ptrClass = "int")
+#set($ptrClassBoxed = "Integer")
+#end
+
 package org.robolectric.shadows;
 
-import android.content.res.AssetManager;
+#if ($apiLevel >= 21)
 import android.graphics.FontFamily;
+#end
+
+import android.content.res.AssetManager;
 import android.graphics.Typeface;
 import org.robolectric.RuntimeEnvironment;
 import org.robolectric.Shadows;
@@ -13,6 +27,7 @@ import org.robolectric.annotation.Resetter;
 import org.robolectric.manifest.AndroidManifest;
 import org.robolectric.util.ReflectionHelpers;
 import org.robolectric.util.ReflectionHelpers.ClassParameter;
+import javax.annotation.Generated;
 
 import java.io.File;
 import java.util.ArrayList;
@@ -22,20 +37,17 @@ import java.util.Map;
 
 import static org.robolectric.Shadows.shadowOf;
 
+@Generated("org.robolectric.shadows.ShadowTypeface.java.vm")
 @Implements(Typeface.class)
 public class ShadowTypeface {
-  private static Map<Long, FontDesc> FONTS = new HashMap<>();
-  private static long nextFontId = 1;
+
+  private static Map<$ptrClassBoxed, FontDesc> FONTS = new HashMap<>();
+  private static $ptrClass nextFontId = 1;
   private FontDesc description;
   @RealObject private Typeface realTypeface;
 
   @HiddenApi
-  public void __constructor__(int fontId) {
-    description = findById(fontId);
-  }
-
-  @HiddenApi
-  public void __constructor__(long fontId) {
+  public void __constructor__($ptrClass fontId) {
     description = findById(fontId);
   }
 
@@ -85,17 +97,19 @@ public class ShadowTypeface {
     return description.getStyle();
   }
 
+#if ($apiLevel >= 21)
   @HiddenApi
-  @Implementation // TODO: API 21
+  @Implementation
   public static Typeface createFromFamilies(FontFamily[] families) {
     return null;
   }
 
   @HiddenApi
-  @Implementation // TODO: API 21
+  @Implementation
   public static Typeface createFromFamiliesWithDefault(FontFamily[] families) {
     return null;
   }
+#end
 
   @Resetter
   synchronized public static void reset() {
@@ -103,16 +117,16 @@ public class ShadowTypeface {
   }
 
   private static Typeface createUnderlyingTypeface(String familyName, int style) {
-    long thisFontId = nextFontId++;
+    $ptrClass thisFontId = nextFontId++;
     FONTS.put(thisFontId, new FontDesc(familyName, style));
-    return ReflectionHelpers.callConstructor(Typeface.class, ClassParameter.from(long.class, thisFontId));
+    return ReflectionHelpers.callConstructor(Typeface.class, ClassParameter.from($ptrClass .class, thisFontId));
   }
 
   private static String getAssetsPath(AndroidManifest appManifest, String fontName) {
     return appManifest.getAssetsDirectory().join(fontName).toString();
   }
 
-  private synchronized static FontDesc findById(long fontId) {
+  private synchronized static FontDesc findById($ptrClass fontId) {
     if (FONTS.containsKey(fontId)) {
       return FONTS.get(fontId);
     }
